# event-planner

./: .gitignore  Makefile  README.md
backend/: .gitignore  README.md  create_invoices.py  event_planner.db  pyproject.toml
backend/event_planner_backend/: auth.py  crud.py  database.py  main.py  models.py  schemas.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  index.tsx
frontend/src/components/: BudgetChart.tsx  CreateInvoiceModal.tsx  CreateProjectModal.tsx  DocumentsWidget.tsx  InvoiceList.tsx  LoginPage.tsx  Navbar.tsx  ProjectDetailsPage.tsx  ProjectFinancialsTab.tsx  ProjectList.tsx  ProjectListPage.tsx  ProtectedRoute.tsx  RegisterPage.tsx  UpcomingInvoices.tsx
